# Shiori

./: .firebaserc  .gitignore  DEPLOY.md  README.md  firebase.json  kobo-converter.html  manifest.webmanifest  sw.js  twa-manifest.json
.github/workflows/: build-android.yml  build-windows.yml  firebase-hosting.yml
.well-known/: assetlinks.json
android/: signing.keystore
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
