[package]
name = "shiori"
version = "1.1.0"
description = "Shiori — convertisseur de mangas pour Kobo"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
